force-app/main/default/objects/Subscription_Addon__c/Subscription_Addon__c.object-meta.xml
<CustomObject>
    <label>Subscription Addon</label>
    <nameField>
        <label>Subscription Addon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Addons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>