force-app/main/default/objects/Subscription_Addon__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>CB Subscription</label>
    <referenceTo>CB_Subscription__c</referenceTo>
    <relationshipLabel>Subscription Addons</relationshipLabel>
    <relationshipName>Subscription_Addons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>